--- a/styles2.css
+++ b/styles2.css
@@ -11,30 +11,20 @@ html{
 body{
     background-color: #555;
     box-sizing: border-box;
+    padding: 0px;
 }
 main{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(7, fit-content);
-    grid-template-areas:    "o o"
-                            "l l"
+    grid-template-areas:   "l l"
                             "h h"
                             "p t"
                             "r r"
                             "d f"
                             "r2 r2";
 }
-main > h1{
-    box-sizing: border-box;
-    text-align: center;
-    font-size: 35px;
-    background-color: rgb(249, 49, 49);
-    color: white;
-    width: 100%;
-    padding: 10px;
-    grid-area: o;
-    text-shadow: 0 0 15px rgba(255,255,255,.5), 0 0 0px rgba(255,255,255,.5);
-}
+
 .item-flex{
     display: flex;
     flex-direction: column;
@@ -233,8 +223,7 @@ footer{
 @media (max-width: 1048px) {
     main{
         grid-template-rows: repeat(8, fit-content);
-        grid-template-areas:    "o o"
-                                "l l"
+        grid-template-areas:    "l l"
                                 "h h"
                                 "p t"
                                 "r r"
@@ -271,8 +260,7 @@ footer{
     main{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(9, fit-content);
-        grid-template-areas:    "o"
-                                "l"
+        grid-template-areas:    "l"
                                 "h"
                                 "p"
                                 "t"
